exports[`test adds nav styles if nav visible 1`] = `
<div className="panel fixed@lap-and-up panel_s3huuu offset_9w2pph" style={{...}}>
<h1>
test
</h1>
</div>
`;

exports[`test appends additional classes 1`] = `
<div className="panel fixed@lap-and-up panel_s3huuu one two" style={{...}}>
<h1>
test
</h1>
</div>
`;

exports[`test overrides with theme 1`] = `
<div className="override" style={{...}}>
<h1>
test
</h1>
</div>
`;

exports[`test renders with props 1`] = `
<div className="panel fixed@lap-and-up panel_s3huuu" style={{...}}>
<h1>
test
</h1>
</div>
`;
